use only libre baskerville for now

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -75,8 +75,8 @@ main {
     @include large {
       p { padding-right: 20%; }
     }
-    font-family: "Work Sans", sans-serif;
-    h2 { font-family: "Libre Baskerville"; }
+    /* font-family: "Work Sans", sans-serif;
+    h2 { font-family: "Libre Baskerville"; } */
   }
 }
 
