--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -7,7 +7,7 @@
   src: url(../fonts/libre-baskerville-latin-ext.woff2) format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
-/* latin */
+/* latin (removed ^ because it looks ugly) */
 @font-face {
   font-family: 'Libre Baskerville';
   font-style: normal;
