--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="/assets/css/main.css">
-  {% seo %}
+  {% seo %} <!-- includes title -->
 
   <!-- favicon stuff -->
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
@@ -17,8 +17,6 @@
   <meta name="msapplication-TileColor" content="#9f00a7">
   <meta name="msapplication-config" content="/assets/images/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
-
-  <title>{{ page.title }}</title>
 </head>
 
 <body>
