--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -38,6 +38,7 @@ a {
 .page {
   height: 100%;
   font-family: "Libre Baskerville", serif;
+  line-height: 1.4;
   code, pre {
     font-size: 16px;
     background-color: $code-color;
