back to work sans

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,6 +4,6 @@ no_heading: true
 ---
 
 <h2>{{ page.title }}</h2>
-<p><i>{{ page.date }}</i></p>
+<p class="date">{{ page.date }}</p>
 
 {{ content }}
