--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -83,8 +83,9 @@ main {
     @include large {
       p { padding-right: 20%; }
     }
-    /* font-family: "Work Sans", sans-serif;
-    h2 { font-family: "Libre Baskerville"; } */
+    font-family: "Work Sans", sans-serif;
+    h2 { font-family: "Libre Baskerville"; }
+    .date { font-family: "Libre Baskerville"; }
   }
 }
 
