fancy year numbers

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,6 +4,6 @@ no_heading: true
 ---
 
 <h2>{{ page.title }}</h2>
-<p class="date">{{ page.date }}</p>
+<p class="serif">{{ page.date }}</p>
 
 {{ content }}
