--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -84,8 +84,8 @@ main {
       p { padding-right: 20%; }
     }
     font-family: "Work Sans", sans-serif;
-    h2 { font-family: "Libre Baskerville"; }
-    .date { font-family: "Libre Baskerville"; }
+    h2 { font-family: "Libre Baskerville", serif; }
+    .serif { font-family: "Libre Baskerville", serif; }
   }
 }
 
