noto sans, notation complaints

--- a/_layouts/navbar.html
+++ b/_layouts/navbar.html
@@ -18,6 +18,8 @@ nav_items:
     text: 'Googology'
 ---
 
+<link rel="stylesheet" href="/assets/css/main.css">
+
 <div class="page">
   <nav>
     <div class="fixed">
