--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -14,5 +14,5 @@ no_heading: true
       chtml: { displayAlign: 'left' }
     };
   </script>
-  <script type="text/javascript" async src="/assets/js/mathjax.js"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-mml-chtml.js"></script>
 {% endif %}
