finish symmetrica, fix alignment in code blocks

--- a/_includes/viewer.html
+++ b/_includes/viewer.html
@@ -1,8 +1,9 @@
 <div class="viewer">
-    <textarea class="rle">
-        x = 50, y = 18, rule = B2-ak3-jnqr4ce/S23<br>
-        {{ include.rle }}
-        [[ THEME 6 THUMBSIZE 2 THUMBLAUNCH ]]
-    </textarea>
-    <canvas></canvas>
+  <textarea class="rle">
+    x = 50, y = 18, rule = B2-ak3-jnqr4ce/S23{{ include.universe }}
+    <br>
+    {{ include.rle }}
+    [[ THEME 6 THUMBSIZE 2 THUMBLAUNCH ]]
+  </textarea>
+  <canvas></canvas>
 </div>
