--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -16,6 +16,8 @@
   <meta name="msapplication-TileColor" content="#9f00a7">
   <meta name="msapplication-config" content="/assets/images/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
+
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
 <body>
