--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,6 +31,10 @@ html, body {
   height: 100%;
 }
 
+body {
+  font-family: "Noto Sans", sans-serif;
+}
+
 a {
   text-decoration: none;
   &:hover { text-decoration: underline; }
@@ -66,7 +70,6 @@ mjx-container {
 
 .page {
   height: 100%;
-  font-family: "Libre Baskerville", serif;
   @include large {
     display: grid;
     grid-template-columns: Max(25%, 260px); /* nav width */
@@ -75,6 +78,7 @@ mjx-container {
 
 nav {
   @include padded;
+  font-family: "Libre Baskerville", serif;
   background-color: $nav-color;
   a { color: white; }
   @include small {
@@ -93,6 +97,10 @@ nav {
 }
 
 main {
+  font-family: "Noto Sans", sans-serif;
+  h2, h3 { font-family: "Libre Baskerville", serif; }
+  .serif { font-family: "Libre Baskerville", serif; }
+
   @include large {
     grid-column: 2;
   }
@@ -103,9 +111,6 @@ main {
   .content {
     @include padded;
     &.narrow { max-width: 800px; }
-    font-family: "Noto Sans", sans-serif;
-    h2, h3 { font-family: "Libre Baskerville", serif; }
-    .serif { font-family: "Libre Baskerville", serif; }
   }
 }
 
