--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -35,6 +35,8 @@ body {
   font-family: "Noto Sans", sans-serif;
 }
 
+.centered { text-align: center; }
+
 a {
   text-decoration: none;
   &:hover { text-decoration: underline; }
