fix buttons/sliders in p5 animations

--- a/_layouts/p5.html
+++ b/_layouts/p5.html
@@ -2,6 +2,13 @@
 layout: 'basic'
 ---
 
+<style>
+  #game {
+    display: inline-block;
+    position: relative;
+  }
+</style>
+
 <div class="centered">
   <div id="game"></div>
   {{ content }}
