--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -17,7 +17,7 @@
   <meta name="msapplication-config" content="/assets/images/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/basic.css">
 </head>
 
 <body>
