at link to forces at play

--- a/_layouts/navbar.html
+++ b/_layouts/navbar.html
@@ -6,6 +6,8 @@ nav_items:
     text: 'Games and Animations'
   - dir: 'blog'
     text: 'Articles'
+  - dir: 'forces'
+    text: 'Forces at Play'
   - dir: 'multifunge'
     text: 'Multifunge'
   - dir: 'unique'
