--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,12 +9,20 @@ no_heading: true
 {{ content }}
 
 {% if page.mathjax %}
-  <script>
-    window.MathJax = {
-      chtml: { displayAlign: 'left' },
-      tex: { tags: 'ams' }
-    };
-  </script>
+  {% if page.center_equations %}
+    <script>
+      window.MathJax = {
+        tex: { tags: 'ams' }
+      };
+    </script>
+  {% else %}
+    <script>
+      window.MathJax = {
+        chtml: { displayAlign: 'left' },
+        tex: { tags: 'ams' }
+      };
+    </script>
+  {% endif %}
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 {% endif %}
