--- a/_layouts/navbar.html
+++ b/_layouts/navbar.html
@@ -8,12 +8,14 @@ nav_items:
     text: 'Articles'
   - dir: 'forces'
     text: 'Forces at Play'
+  - dir: 'symmetrica'
+    text: 'Symmetrica'
+  - dir: 'umass-map'
+    text: 'UMass Trail Map'
   - dir: 'multifunge'
     text: 'Multifunge'
   - dir: 'unique'
     text: 'Unique'
-  - dir: 'symmetrica'
-    text: 'Symmetrica'
   - dir: 'alphabet'
     text: 'Featural Alphabet'
 ---
